# mcmanager

./: .gitignore  LICENSE  README.md  mcm  pyproject.toml
mcmanager/: __init__.py  cli.py  config.py  jarmeta.py  plugins.py  sources.py  sources.yml  updates.py
